# starting-ragchatbot-codebase

./: .flake8  CLAUDE.md  README.md  fix.sh  format.sh  frontend-changes.md  pyproject.toml  quality.sh
backend/: ai_generator.py  app.py  backend-tool-revactor.md  config.py  rag_system.py  search_tools.py
backend/tests/: __init__.py  conftest.py  test_ai_generator.py  test_api.py  test_course_search_tool.py  test_rag_system.py
frontend/: index.html  script.js  style.css
